# SVCE-Workshop-Basics-Participants

./: README.md  app.py  pyproject.toml
